testsuite/tests/properties/invalid_array_lit/test.out
== Empty: missing type ==
test.py:21: error: Missing element type for empty array literal

== Empty: ok ==
test.py:19: warning: This private property is unused
Code generation was successful

== Single: ok ==
test.py:19: warning: This private property is unused
Code generation was successful

== Multiple: heterogeneous types ==
test.py:21: error: In Array literal, expected element of type Bool, got Example

Done
